@@ -5,6 +5,7 @@ CHANGES IN CUPS V1.1.15
 
 	- Updated the CUPS license agreement for the new MacOS
 	  license exception.
+	- The serial backend now detects USB serial devices.
 	- The LPD mini-daemon (cups-lpd) now passes the
 	  job-originating-host-name attribute to the scheduler
 	  (cupsd).
